fix lineheight and [#1] variable names for the scrollbar components

--- a/scss/components/_scrollbar.scss
+++ b/scss/components/_scrollbar.scss
@@ -10,9 +10,9 @@
 
 /* handle */
 ::-webkit-scrollbar-thumb {
-    background-color: $color-scrollbar-thumb;
+    background-color: $background-color-scrollbar-thumb;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: $color-scrollbar-thumb-hover;
+    background-color: $background-color-scrollbar-thumb-hover;
 }
