--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -64,6 +64,6 @@ $heading-base-font-size: 1!default; /* in 'rem' */
 
 //* scrollbar *//
 $scrollbar-width: 4px!default;
-$color-scrollbar-thumb: $color-secondary!default;
-$color-scrollbar-thumb-hover: $accent-color-secondary!default;
+$background-color-scrollbar-thumb: $color-secondary!default;
+$background-color-scrollbar-thumb-hover: $accent-color-secondary!default;
 
